--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ header {
     text-align: center;
 }
 
-#state {
+button {
     padding: 10px;
     width: 50px;
     height: 50px;
@@ -36,6 +36,6 @@ header {
     color: white;
 }
 
-#state:hover {
+button:hover {
     transform: scale(1.2);
 }
